--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,8 +24,8 @@ en:
     description: >
       Retrieve detailed information about the services available
       in %{location}.
-    header: 'Find community services in %{location}'
-    location: 'San Mateo County'
+    header: 'Search %{location} Services'
+    location: 'Maryland'
 
   buttons:
     clear_search_fields: 'Clear search fields'
@@ -139,9 +139,8 @@ en:
           %{location_url}.
     about:
       project_link: 'Visit project on GitHub'
-      project_link_url: 'https://github.com/codeforamerica/Ohana-Web-Search'
+      project_link_url: 'https://github.com/wordofmouth/Ohana-Web-Search'
     feedback:
       issue_link: 'File an issue on Github'
-      issue_link_url: 'https://github.com/codeforamerica/Ohana-Web-Search/issues'
+      issue_link_url: 'https://github.com/wordofmouth/Ohana-Web-Search/issues'
       submit_comment_label: 'Submit comments to the development team:'
-
